# ml-mastery-rs

./: Makefile  bors.toml
.github/workflows/: ci.yml
apps/ionosphere/: Cargo.toml
apps/ionosphere/src/: main.rs
apps/predict-owls/: Cargo.toml
apps/predict-owls/src/: main.rs
libs/dataset-gen/: Cargo.toml
libs/dataset-gen/src/: lib.rs
libs/ml-kit/: Cargo.toml
libs/ml-kit/src/: lib.rs  preprocessing.rs
libs/neural-network/: Cargo.toml
libs/neural-network/src/: lib.rs  mlp.rs
libs/perceptron/: Cargo.toml
libs/perceptron/src/: lib.rs
