[package]
name = "predict-owls"
version = "0.1.0"
authors = ["Kristoffer Andersson <kod.kristoff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.5"
ndarray = "0.14"
ndarray-csv = "0.5.0"
ndarray-rand = "0.13.0"
neural-network = { path = "../../libs/neural-network" }
