[package]
name = "neural-network"
version = "0.1.0"
authors = ["Kristoffer Andersson <kod.kristoff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.4.0"
ndarray = { version = "0.14.0", features = ["approx"] }
ndarray-rand = "0.13.0"
rand = "0.8.3"

[dev-dependencies]
rand_chacha = "0.3.0"
